fixed widths on mobile

--- a/src/components/SimpleQr/SimpleQr.scss
+++ b/src/components/SimpleQr/SimpleQr.scss
@@ -28,8 +28,9 @@
         border: 1px solid rgb(241, 241, 241);
 
         @media screen and (max-width: 700px) {
-            margin-top: 40px;
+            margin-top: 20px;
             width: 100%;
+            padding: 30px 40px;
         }
 
         button {
